gh-3074 Fix checkstyle